# Inspector

./: .gitignore  BRANCH_COMPARISON.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  QT6_BRANCH_CONTENTS.md  QT6_IMPLEMENTATION_SUMMARY.md  QUICKSTART_QT6.md  README.md  README_QT6.md  TEST_ASSESSMENT.md  VERIFICATION_REPORT.md  clab-wrapper.bat  clab-wrapper.sh  demo-happy-flow.webm  demo-sample-data.webm  electron-main.js  inspector-twin-demo.webm  modern.qss  package-lock.json  package.json  playwright-demo.config.ts  playwright.config.ts  preload.js  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.txt  run_dev.sh  setup_qt6.bat  setup_qt6.sh  spec.txt  test_inspector_qt6.py  test_warning_dialog.py  tsconfig.build.json  tsconfig.json  verify.sh  verify_qt6.sh
demo/: DEMO_VIDEOS.md
docs/: BUILD_SUMMARY.md  IMPLEMENTATION.md  NETWORK_SCANNER_FEATURE.md  architecture.html  moscow.html
electron-app/: engine.js  index.html  network.html  network.js  renderer.js  styles.css
frontend/: ARCHITECTURE.md  INDEX.md  README.md  STRUCTURE.md  topology-utils.ts
inspector_qt6/: __init__.py  __main__.py
inspectortwin/: .gitignore  CHANGELOG.md  COMMANDS.sh  MANIFEST.md  QUICKSTART.md  START_HERE.txt  STATUS.md  package-lock.json  run_dev.bat  run_dev.sh  verify.sh
network-scans/: network-scan-cf89fb59-c144-4a50-a6b4-957989b39729-20260218_225016-docker-compose.yml  network-scan-cf89fb59-c144-4a50-a6b4-957989b39729-20260218_225016.json  network-scan-cf89fb59-c144-4a50-a6b4-957989b39729-20260218_230715.json
scripts/: INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  build.sh  example-network-topology.json  network-topology-mapper.py  otlp-collector-config.yaml  requirements-network-scanner.txt  scan-network-topology.sh  seed.mjs  (+2 more)
(+598 files in other folders)
